--- a/index.html
+++ b/index.html
@@ -745,8 +745,11 @@ body {
   }
 
   #content {
-    max-width: 100%;
-    padding: 1.5rem;
+    margin: auto;
+    max-width: 800px;
+    border: 2px solid #8B8B81;
+    border-radius: 12px;
+    padding: 20px;
     background-color: #BFBFBF;
     box-sizing: border-box;
     overflow-y: auto;
