--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     if (network === 'testnet') network = 'test3';
     if (network !== 'test3') network = 'main';
     let tx = urlParams.get('tx');
+    if (tx == 'random') tx = example_txs[Math.floor(Math.random() * example_txs.length)];
+    if (!isNaN(tx)) tx = example_txs[parseInt(tx)];
 
     async function get(tx) {
       try {
