--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             } else {
               encoding = 'multisig (custom length)';
               raw = xcp_rc4(utxo, raw);
-              len = parseInt(hexToDec(raw.substring(0, 2)));
+              len = parseInt(hexToDec(0, 2));
               if (isNaN(len) || len < 0 || len > (raw.length - 2) / 2) {
                 console.error(`Invalid length in multisig script ${i}: len=${len}, script=${raw}`);
                 continue;
@@ -373,7 +373,7 @@
           console.log(`q_hex=${q_hex}, q=${q}`);
           cp_msg = cp_msg.substring(16);
 
-          let div_hex = cp_msg.substring(0, 2);
+          let div_hex = cp940
           let div = parseInt(div_hex, 16) ? true : false;
           cp_msg = cp_msg.substring(2);
 
@@ -737,6 +737,14 @@
       }
       return out;
     }
+
+    // Automatically decode transaction from URL on page load
+    window.onload = function() {
+      if (tx) {
+        document.getElementById('txid').value = tx; // Pre-fill the input field
+        get_json(tx); // Automatically decode the transaction
+      }
+    };
   </script>
 
   <style>
