--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@ body.dark-mode {
     }
 
     #theme-toggle {
-      position: fixed;
+      position: absolute;
       top: 1rem;
       right: 1rem;
       padding: 0.5rem 0.5rem;
