--- a/index.html
+++ b/index.html
@@ -1552,12 +1552,33 @@ input[type=submit]:hover {
     padding-left: 0.75rem;
 }
 
-.stamp-image, .stamp-iframe {
+.stamp-iframe {
     width: 600px;
     height: auto;
     margin: 1rem 0;
     display: block;
   	aspect-ratio: 1/1;
+  	image-rendering: pixelated;
+    -ms-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    -o-transform: scale(0.6);
+    -webkit-transform: scale(0.6);
+    transform: scale(0.6);
+    -ms-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    -o-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0
+  }
+
+
+
+.stamp-image {
+  	width: 600px;
+    height: auto;
+    margin: 1rem 0;
+    display: block;
+    image-rendering: pixelated;
     -ms-transform: scale(0.5);
     -moz-transform: scale(0.5);
     -o-transform: scale(0.5);
@@ -1567,17 +1588,23 @@ input[type=submit]:hover {
     -moz-transform-origin: 0 0;
     -o-transform-origin: 0 0;
     -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-  }
-
-.stamp-image {
-    image-rendering: pixelated;
+    transform-origin: 0 0;  
+    
 }
 
     .stamp-video {
       width: 600px;
       height: auto;
-      transform: scale(0.5);
+          -ms-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    -ms-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    -o-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0
       transform-origin: top left;
       margin: 0;
     }
