--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,7 @@ pre.base64-content {
 <body>
 <div id="content">
     <button id="theme-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
-  <h1>Bitcoin STAMP Decoder v1.0</h1><Br>
+  <h1>Bitcoin STAMP <br> Decoder v1.0</h1><Br>
   <p>Enter a Bitcoin transaction ID to decode CP/Stamps Data.</p>
   <form onsubmit="event.preventDefault(); get_json(document.getElementById('txid').value);">
     <p>
